--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ section{
 
 /*------------------------// Promo /--------------------------------*/
 #promo{
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(img/ser-bg.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(Img/ser-bg.jpg);
     background-size: cover;
     background-position: center;
     color: #fff;
@@ -163,7 +163,7 @@ section{
 
 /*---------Services----------*/
 #why{
-    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(img/about-bg.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(Img/about-bg.jpg);
     background-size: cover;
     background-position: center;
     color: #efefef !important;
