--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ section{
 
 /*-----------------------Get In Touch------------------------*/
 #contact{
-    background: #efefef;
+    background: #efefef !important;
     padding-top: 40px;
     padding-bottom: 40px;
     color: #777;
