--- a/style.css
+++ b/style.css
@@ -233,6 +233,10 @@ footer a{
     text-decoration: none;
 }
 
+.con-detail{
+    padding-right: 20px;
+}
+
 @media (max-width: 430px) {
 .card{
     width: 25rem !important;
