--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ section{
 }
 
 /*------------------------// Productss //-----------------------------*/
-#products h1:after{
+#products #title:after{
     content: '';
     background: #efefef;
     display: block;
